ANOTHE IMPROVE COPY

--- a/html/index.html
+++ b/html/index.html
@@ -207,7 +207,7 @@
               align-items-center
             "
           >
-            <p class="fs-1 text-white">SOME OTHER TEXT HERE</p>
+            <p class="fs-1 text-white">another text TEXT HERE</p>
           </div>
         </div>
       </div>
